# verba

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
.serena/: project.yml
docs/: architecture.md
sample/: .thumbnail  Verba - AI Language Learning.dc.html
src/: App.css  App.tsx  main.tsx  theme.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make-source.py
src-tauri/src/: lib.rs  main.rs  speech.rs  vault.rs
src/lib/: backup.check.ts  backup.ts  bundled.ts  coach.ts  db.ts  lang.check.ts  langs.ts  learn.ts  level.ts  listening.check.ts  listening.ts  memory.check.ts  metrics.ts  models.ts  onboarding.check.ts  phase2.check.ts  phase3.check.ts  phase4.check.ts  placement.check.ts  placement.ts  prompter.check.ts  prompter.ts  prompts.ts  questions.check.ts  questions.ts  reading.check.ts  reading.ts  scenarios.ts  settings.ts  speech.check.ts  speech.ts  srs.check.ts  srs.ts  text.ts  useDay.ts  useListening.ts  useRead.ts  useTalk.ts  vault.ts  vocab.check.ts  (+3 more)
src/lib/packs/: doc.ts  (+6 more)
src/views/: Chat.tsx  Coach.tsx  Daily.tsx  DataPanel.tsx  Listening.tsx  Memory.tsx  Onboarding.tsx  QuestionCard.tsx  Read.tsx  Reading.tsx  Settings.tsx  Talk.tsx  Today.tsx  Vocabulary.tsx
website/: README.md  _headers  _redirects  build.cjs  index.html  robots.txt  sitemap.xml  styles.css  template.html
website/de/: index.html
website/en/: index.html
website/es/: index.html
website/fr/: index.html
website/it/: index.html
website/ja/: index.html
website/pt/: index.html
website/strings/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  tr.json
(+44 files in other folders)
