[package]
name = "verba"
version = "0.2.0"
description = "A local-first AI language tutor: conversation, reading and recall, with speech that can run entirely on your own machine."
authors = ["Nuvo Code"]
license = "MIT"
repository = "https://github.com/nuvocode/verba"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "verba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The bundled speech tier. `sherpa-onnx` is the k2-fsa project's own Rust binding,
# version-locked to the C++ release; its build script downloads a prebuilt static
# lib, so this costs no cmake and no C++ compile (~20s cold, then cached).
sherpa-onnx = "1.13.4"
# Model downloads: the catalog points at sherpa-onnx GitHub release assets, which
# are .tar.bz2 — hence tar + bzip2. sha2 verifies before anything is unpacked.
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
sha2 = "0.10"
tar = "0.4"
bzip2 = "0.4"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

